--- a/divfr.html
+++ b/divfr.html
@@ -38,7 +38,7 @@
 
         h2 {
             color: #2e85bf;
-            font-weight: 700;
+            font-weight: 600;
             margin-bottom: 20px;
             font-size: 2em;
         }
@@ -48,9 +48,9 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            align-items: center;
-            gap: 15px;
-            margin-bottom: 20px;
+            align-items: stretch;
+            gap: 20px;
+            margin-bottom: 15px;
             width: 100%;
         }
 
@@ -59,14 +59,14 @@
         .input-container button,
         .input-container input[type="text"] {
             padding: 15px;
-            border: 2px solid #4e4f9c;
+            border: 0px solid #4e4f9c;
             border-radius: 10px;
             font-size: 1em;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 10px rgb(0, 0, 0);
             outline: none;
             transition: transform 0.2s ease, box-shadow 0.2s ease;
             flex: 1 1 auto;
-            max-width: 250px;
+            min-width: 200px;
         }
 
         .input-container input:focus,
@@ -281,8 +281,10 @@
         </div>
         <div class="labels-container">
             <div class="logo-container">
-                <img src="/logo.png" alt="Logo" class="logo" />
-            </div>
+                <a href="https://www.tusitio.com">
+                    <img src="/logo.png" alt="Logo" class="logo" />
+                </a>
+            </div
             <p>Monto: <span id="labelMonto"></span></p>
             <p>Tipo de cambio: <span id="labelTipoCambio"></span></p>
             <p>Total en moneda nacional: <span id="labelTotal"></span></p>
