--- a/divfr.html
+++ b/divfr.html
@@ -281,8 +281,8 @@
         </div>
         <div class="labels-container">
             <div class="logo-container">
-                <a href="https://www.tusitio.com">
-                    <img src="/logo.png" alt="Logo" class="logo" />
+                <a href="https://thoraal.github.io/">
+                    <img src="assets/img/logo.png" alt="Logo" class="logo" />
                 </a>
             </div
             <p>Monto: <span id="labelMonto"></span></p>
