--- a/divfr.html
+++ b/divfr.html
@@ -313,7 +313,9 @@
             </thead>
             <tbody></tbody>
         </table>
-        <div id="sumaResultado" class="sum-result"></div>
+    <div id="footer">
+        Developed by <a href="https://thoraal.github.io/#work" target="_blank">Alejandro Toral</a>
+    </div>
     </div>
     <script>
         // JavaScript functions for handling various actions
